<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_register"
        android:layoutDirection="rtl"
        tools:context=".features.authenticate.ui.fragment.SuccessfullyRegisterFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalStart_fragmentSuccessfullyRegister"
            style="@style/startVerticalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalEnd_fragmentSuccessfullyRegister"
            style="@style/endVerticalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/iv_logo_fragmentSuccessfullyRegister"
            style="@style/logoStyle"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:contentDescription="@string/label_heliumPlusLogo"
            app:layout_constraintStart_toEndOf="@id/gl_verticalStart_fragmentSuccessfullyRegister"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_verify_fragmentSuccessfullyRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_successfullyTikIcon"
            android:src="@drawable/ic_verify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            style="@style/boldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message_successfullyRegister"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_verify_fragmentSuccessfullyRegister" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_fragmentSuccessfullyRegister"
            style="@style/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/label_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_verticalEnd_fragmentSuccessfullyRegister"
            app:layout_constraintStart_toStartOf="@id/gl_verticalStart_fragmentSuccessfullyRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>