<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.authenticate.ui.fragment.LoginRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_register"
        android:layoutDirection="rtl">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalStart_fragmentLoginRegister"
            style="@style/startVerticalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalEnd_fragmentLoginRegister"
            style="@style/endVerticalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/iv_logo_fragmentLoginRegister"
            style="@style/logoStyle"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/label_heliumPlusLogo"
            app:layout_constraintBottom_toTopOf="@id/tv_description_fragmentLoginRegister"
            app:layout_constraintStart_toStartOf="@id/gl_verticalStart_fragmentLoginRegister" />

        <TextView
            android:id="@+id/tv_description_fragmentLoginRegister"
            style="@style/messageStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/message_heliumDescription"
            app:layout_constraintBottom_toTopOf="@id/btn_Register_fragmentLoginRegister"
            app:layout_constraintEnd_toEndOf="@id/gl_verticalEnd_fragmentLoginRegister"
            app:layout_constraintStart_toStartOf="@id/gl_verticalStart_fragmentLoginRegister" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Register_fragmentLoginRegister"
            style="@style/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_register"
            app:layout_constraintBottom_toTopOf="@id/btn_Login_fragmentLoginRegister"
            app:layout_constraintEnd_toEndOf="@id/gl_verticalEnd_fragmentLoginRegister"
            app:layout_constraintStart_toStartOf="@id/gl_verticalStart_fragmentLoginRegister" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Login_fragmentLoginRegister"
            style="@style/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/bg_btn_login"
            android:text="@string/label_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_verticalEnd_fragmentLoginRegister"
            app:layout_constraintStart_toStartOf="@id/gl_verticalStart_fragmentLoginRegister"
            app:strokeColor="@color/white_op16"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>