<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main"
        android:layoutDirection="rtl">

        <ImageView
            android:id="@+id/iv_personIcon_fragmentProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:contentDescription="@string/label_profileIcon"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_userFullName_fragmentProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sample_name1"
            android:textAppearance="@style/boldFont"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginEnd="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="start"
            app:layout_constraintEnd_toStartOf="@id/iv_menu_fragmentProfile"
            app:layout_constraintBottom_toBottomOf="@id/iv_personIcon_fragmentProfile"
            app:layout_constraintStart_toEndOf="@id/iv_personIcon_fragmentProfile"
            app:layout_constraintTop_toTopOf="@id/iv_personIcon_fragmentProfile" />

        <ImageView
            android:id="@+id/iv_menu_fragmentProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/label_hamburgerIcon"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@id/iv_personIcon_fragmentProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_personIcon_fragmentProfile"
            app:tint="@color/white" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_profile_fragmentProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bg_main"
            app:layout_constraintTop_toBottomOf="@id/iv_personIcon_fragmentProfile"
            app:tabIconTint="@color/selector_bg_icon"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/silver" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2_fragmentProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout_profile_fragmentProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>